[package]
name = "graph-war"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bevy = "0.6"
bevy_svg = "0.6"
egui = "0.16"
bevy_egui = "0.11.1"
bevy-inspector-egui = "0.8.2"
fxhash = "0.2.1"
pest = "2.1.3"
pest_derive = "2.1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
flexi_logger = "0.22"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-logger = "0.2"
wasm-bindgen = "0.2.45"
js-sys = "0.3"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
]

[target.'cfg(all(debug_assertions, target_family = "wasm"))'.dependencies]
console_error_panic_hook = "0.1.5"