[package]
name = "graph-war"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bevy = "0.6"
bevy_svg = "0.6"
egui = "0.17"
once_cell = "1.10.0"
bevy_egui = "0.12.0"
bevy-inspector-egui = "0.8.2"
fxhash = "0.2.1"
pest = "2.1.3"
pest_derive = "2.1.0"
decorum = "0.3.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
#rand_distr = "0.4.3"
bevy_rapier2d = "0.12.1"
bitflags = "1.3.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
flexi_logger = "0.22"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-logger = "0.2"
wasm-bindgen = "0.2.45"
js-sys = "0.3"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
]

[target.'cfg(all(debug_assertions, target_family = "wasm"))'.dependencies]
console_error_panic_hook = "0.1.5"